objects/vlocity_cmt__AttributeAssignmentRule__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryId__c</fullName>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Attribute</label>
        <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
        <relationshipLabel>Attribute Assignment Rules</relationshipLabel>
        <relationshipName>AttributeAssignmentRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SObjectTypes__c</fullName>
        <label>SObjectTypes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>CustomerInteraction__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Service__c</fullName>
        <label>Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Tracking Formula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Attribute Assignment Rule</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attribute Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>